project/svc.yml
apiVersion: v1
kind: Service
metadata:
  name: svc-np
spec:
  type: NodePort
  ports:
  - port: 80
    targetPort: 5000
    nodePort: 32123
  selector:
    app: web-deploy
---
apiVersion: v1
kind: Service
metadata:
  name: mysql-svc
spec:
  type: ClusterIP
  ports:
  - port: 3306
    targetPort: 3306
  selector:
    app: mysql
