project/ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: myapp-ing
spec:
  tls:
  - hosts:
    - deathnote.com
    secretName: tls-secret
  rules:
  - host: deathnote.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: svc-np
            port:
              number: 80
